Updated layout files

--- a/app/views/athletes/_form.html.erb
+++ b/app/views/athletes/_form.html.erb
@@ -4,7 +4,7 @@
 
     <%= f.input :name %>
     <%= f.input :email %>
-    <%= f.input :sport %>
+    <%= f.association :sport %>
 
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
