--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,25 +1,24 @@
-<h1>Listing sports</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>University</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @sports.each do |sport| %>
-  <tr>
-    <td><%= sport.name %></td>
-    <td><%= sport.university_id %></td>
-    <td><%= link_to 'Show', sport %></td>
-    <td><%= link_to 'Edit', edit_sport_path(sport) %></td>
-    <td><%= link_to 'Destroy', sport, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<h1>Sports</h1>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sports.each do |sport| %>
+      <tr>
+        <td><%= sport.id %></td>
+        <td><%= link_to sport.name, sport_path(sport) %></td>
+        <td>
+          <%= link_to 'Edit', edit_sport_path(sport), :class => 'btn btn-mini' %>
+          <%= link_to 'Destroy', sport_path(sport), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Sport', new_sport_path %>
+<%= link_to 'New', new_sport_path, :class => 'btn btn-primary' %>
