--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
         <%= link_to "Sift Pro", root_path, class: "brand" %>
         <div class="nav-collapse">
           <ul class="nav">
+            <li><%= link_to "Universities", universities_path %></li>
+            <li><%= link_to "Sports", sports_path %></li>
             <li><%= link_to "Athletes", athletes_path %></li>
           </ul>
         </div>
