--- a/app/views/sports/_form.html.erb
+++ b/app/views/sports/_form.html.erb
@@ -1,12 +1,13 @@
-<%= simple_form_for(@sport) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for @sport, :html => { :class => 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend><%= controller.action_name.capitalize %> Sport</legend>
 
-  <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :university_id %>
-  </div>
+    <%= f.association :university %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to 'Cancel', sports_path, :class => 'btn' %>
+    </div>
+  </fieldset>
 <% end %>
