--- a/app/views/universities/_form.html.erb
+++ b/app/views/universities/_form.html.erb
@@ -1,12 +1,13 @@
-<%= simple_form_for(@university) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for @university, :html => { :class => 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend><%= controller.action_name.capitalize %> University</legend>
 
-  <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :location %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to 'Cancel', universities_path, :class => 'btn' %>
+    </div>
+  </fieldset>
 <% end %>
