--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<h1>University</h1>
 
 <p>
-  <b>Name:</b>
+  <b>Name</b><br>
   <%= @university.name %>
 </p>
 
 <p>
-  <b>Location:</b>
+  <b>Location</b><br>
   <%= @university.location %>
 </p>
 
-
-<%= link_to 'Edit', edit_university_path(@university) %> |
-<%= link_to 'Back', universities_path %>
+<div class="form-actions">
+  <%= link_to 'Back', universities_path, :class => 'btn'  %>
+  <%= link_to 'Edit', edit_university_path(@university), :class => 'btn' %>
+  <%= link_to 'Delete', university_path(@university), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+</div>
