--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -15,6 +15,7 @@
         <td><%= link_to athlete.name, athlete_path(athlete) %></td>
         <td><%= athlete.sport.name %></td>
         <td>
+          <%= link_to 'Authorize', authorize_athlete_path(athlete), :class => 'btn btn-mini btn-primary' %>
           <%= link_to 'Edit', edit_athlete_path(athlete), :class => 'btn btn-mini' %>
           <%= link_to 'Destroy', athlete_path(athlete), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
         </td>
