--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -22,6 +22,7 @@
 
 <div class="form-actions">
   <%= link_to 'Back', athletes_path, :class => 'btn'  %>
+  <%= link_to 'Authorize', authorize_athlete_path(@athlete), :class => 'btn btn-primary'  %>
   <%= link_to 'Edit', edit_athlete_path(@athlete), :class => 'btn' %>
   <%= link_to 'Delete', athlete_path(@athlete), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
 </div>
