Adding some validations

--- a/app/views/athletes/_form.html.erb
+++ b/app/views/athletes/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :name %>
     <%= f.input :email %>
     <%= f.association :sport %>
+    <%= f.association :university %>
 
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
