--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -25,7 +25,7 @@
             <li><%= link_to "About", "" %></li>
             <li><%= link_to "Pricing", "" %></li>
             <li><%= link_to "Sign up", "" %></li>
-            <li><%= link_to "Log in", "" %></li>
+            <li><%= link_to "Log in", new_user_session_path %></li>
           </ul>
         </div>
       </div>
