--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -24,7 +24,7 @@
           <ul class="nav">
             <li><%= link_to "About", "" %></li>
             <li><%= link_to "Pricing", "" %></li>
-            <li><%= link_to "Sign up", "" %></li>
+            <li><%= link_to "Sign up", new_registration_path(resource_name) %></li>
             <li><%= link_to "Log in", new_user_session_path %></li>
           </ul>
         </div>
