--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,7 @@
 <div class="hero-unit">
   <h1>Keeping bad tweets off the streets, yo.</h1>
   <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering your the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
-  <p><a class="btn btn-large">Learn more &raquo;</a>&nbsp;<%= link_to "Sign up!", new_registration_path(resource_name), class: "btn btn-primary btn-large" %></p>
+  <p><a class="btn btn-large">Learn more &raquo;</a>&nbsp;<%= link_to "Sign up!", signup_path, class: "btn btn-primary btn-large" %></p>
 </div>
 
 <div class="row">
