--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Athletes</h1>
+
+<% if @athletes.present? %>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -23,5 +26,16 @@
     <% end %>
   </tbody>
 </table>
+
+<% else %>
+
+<div class="row" id="empty_content_page">
+  <div class="span12 well">
+    <h1>No athletes created.</h1>
+    <p>You haven't added any athletes yet. <%= link_to "Add one now.", new_athlete_path %></p>
+  </div>
+</div>
+
+<% end %>
 
 <%= link_to 'New', new_athlete_path, :class => 'btn btn-primary' %>
