--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -15,6 +15,8 @@
   </li>
 </ul>
 
+<% if @issues.present? %>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -39,3 +41,14 @@
     <% end %>
   </tbody>
 </table>
+
+<% else %>
+
+<div class="row" id="empty_content_page">
+  <div class="span12 well">
+    <h1>No issues to review.</h1>
+    <p>You currently don't have any <%= params[:filter] == "all" ? "" : params[:filter] %> issues.</p>
+  </div>
+</div>
+
+<% end %>
