--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <!--
+  If you had Sift Pro, this would have been filtered out.
+   _______                      _______           _        ______  
+  (  ___  )|\     /|  |\     /|(  ___  )|\     /|( (    /|(  __  \ 
+  | (   ) |( \   / )  | )   ( || (   ) || )   ( ||  \  ( || (  \  )
+  | (___) | \ (_) /   | | _ | || |   | || |   | ||   \ | || |   ) |
+  |  ___  |  ) _ (    | |( )| || |   | || |   | || (\ \) || |   | |
+  | (   ) | / ( ) \   | || || || |   | || |   | || | \   || |   ) |
+  | )   ( |( /   \ )  | () () || (___) || (___) || )  \  || (__/  )
+  |/     \||/     \|  (_______)(_______)(_______)|/    )_)(______/ 
+   -->
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
