--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -22,7 +22,7 @@
         <%= link_to "Sift Pro", root_path, class: "brand" %>
         <div class="nav-collapse">
           <ul class="nav">
-            <li<%= static_current_page(about_path) %>><%= link_to "About", about_path %></li>
+            <li<%= static_current_page(features_path) %>><%= link_to "Features", about_path %></li>
             <li<%= static_current_page(pricing_path) %>><%= link_to "Pricing", pricing_path %></li>
             <li<%= static_current_page(signup_path) %>><%= link_to "Sign up", signup_path %></li>
             <li<%= static_current_page(new_user_session_path) %>><%= link_to "Log in", login_path %></li>
