--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,34 @@
             <li<%= current_class("sports") %>><%= link_to "Sports", sports_path %></li>
             <li<%= current_class("athletes") %>><%= link_to "Athletes", athletes_path %></li>
             <li<%= current_class("users") %>><%= link_to "Users", "" %></li>
-            <li<%= current_class("settings") %>><%= link_to "Settings", "" %></li>
+            <li class="dropdown">
+              <a href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown">
+                    Settings
+                    <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to blacklists_path do %>
+                    <i class="icon-ban-circle"></i>
+                    Blacklist
+                  <% end %>
+                </li>        
+                <li>
+                  <%= link_to edit_user_registration_path(resource) do %>
+                    <i class="icon-user"></i>
+                    User
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to edit_university_path(current_university) do %>
+                    <i class="icon-cog"></i>
+                    University
+                  <% end %>
+                </li>
+              </ul>
+            </li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           </ul>
         </div>
