Page headers, unnecessary show pages

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Issues</h1>
+<div class="page-header">
+  <h1>Issues</h1>
+</div>
 
 <ul class="nav nav-pills">
   <li<%= " class='active'" if current_page?(filter: "open") || params[:filter].nil? %>>
