--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Athletes</h1>
+<div class="page-header">
+  <h1>Athletes</h1>
+</div>
 
 <ul class="nav nav-pills">
   <li<%= " class='active'" if current_page?(filter: "all") || params[:filter].nil? %>>
@@ -24,7 +26,7 @@
   <tbody>
     <% @athletes.each do |athlete| %>
       <tr>
-        <td><%= link_to athlete.name, athlete_path(athlete) %></td>
+        <td><%= athlete.name %></td>
         <td><%= athlete.sport.name %></td>
         <td>
           <%= link_to 'Authorize', authorize_athlete_path(athlete), :class => 'btn btn-mini btn-primary' %>
