--- a/app/views/blacklists/index.html.erb
+++ b/app/views/blacklists/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Blacklists</h1>
+<div class="page-header">
+  <h1>Blacklists</h1>
+</div>
 
 <ul class="nav nav-pills">
   <li<%= " class='active'" if current_page?(filter: "all") || params[:filter].nil? %>>
