First run at a dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         <%= link_to "Sift Pro", root_path, class: "brand" %>
         <div class="nav-collapse">
           <ul class="nav">
-            <li<%= current_class("dashboard") %>><%= link_to "Dashboard", "" %></li>
+            <li<%= current_class("dashboard") %>><%= link_to "Dashboard", root_path %></li>
             <li<%= current_class("issues") %>><%= link_to "Issues", issues_path %></li>
             <li<%= current_class("sports") %>><%= link_to "Sports", sports_path %></li>
             <li<%= current_class("athletes") %>><%= link_to "Athletes", athletes_path %></li>
