--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -3,6 +3,15 @@
   padding-bottom: 17px;
   margin: 18px -30px 18px 0;
   text-align: center;
+  
+  p {
+    font-size: 24px;
+    
+    small {
+      display: block;
+      text-transform: uppercase;
+    }
+  }
 }
 
 #quick_stats {
