--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -5,4 +5,4 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="disabled"><%= raw(t 'views.pagination.truncate') %></li>
+<li class="disabled"><a class="disabled"><%= raw(t 'views.pagination.truncate') %></a></li>
