--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,7 +28,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to issues_path(filter: "open") do %>
+        <%= link_to new_user_invitation_path(type: "athlete") do %>
           <i class="icon-user"></i>
           Invite Athlete
         <% end %>
