--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,34 @@
             <li<%= current_class("issues") %>><%= link_to "Issues", issues_path %></li>
             <li<%= current_class("sports") %>><%= link_to "Sports", sports_path %></li>
             <li<%= current_class("athletes") %>><%= link_to "Athletes", athletes_path %></li>
-            <li<%= current_class("users") %>><%= link_to "Users", "" %></li>
+            <li class="dropdown">
+              <a href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown">
+                    Users
+                    <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to "" do %>
+                    <i class="icon-cog"></i>
+                    Manage Users
+                  <% end %>
+                </li>        
+                <li>
+                  <%= link_to new_user_invitation_path(type: "admin") do %>
+                    <i class="icon-plus-sign"></i>
+                    Invite Admin
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_invitation_path(type: "athlete") do %>
+                    <i class="icon-plus-sign"></i>
+                    Invite Athlete
+                  <% end %>
+                </li>
+              </ul>
+            <li>
             <li class="dropdown">
               <a href="#"
                     class="dropdown-toggle"
