--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,9 +93,28 @@
                 </li>
               </ul>
             </li>
-            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           </ul>
         </div>
+        <ul class="nav pull-right">
+          <li class="divider-vertical"></li>
+          <li class="dropdown">
+            <a href="#"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown">
+                  <i class="icon-user icon-white"></i>
+                  <%= current_user.email %>
+                  <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to "Settings", edit_user_registration_path(resource) %>
+              </li>
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
