--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to "" do %>
+                  <%= link_to users_path do %>
                     <i class="icon-cog"></i>
                     Manage Users
                   <% end %>
