--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,5 @@
+<% if current_user.admin? %>
+
 <div class="row" id="quick_metrics">
   <div class="span4">
     <h3>Tracked Athletes</h3>
@@ -87,3 +89,12 @@
     <% end %>
   </div>
 </div>
+
+<% else %>
+  
+  <%= simple_form_for :tweet, url: post_athlete_path(@athlete) do |f| %>
+    <%= f.input :text %>
+    <%= f.button :submit %>
+  <% end %>
+
+<% end %>
