--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
           <ul class="nav">
             <li<%= current_class("dashboard") %>><%= link_to "Dashboard", root_path %></li>
             <li<%= current_class("issues") %>><%= link_to "Issues", issues_path %></li>
+            <% if current_user.admin? %>
             <li<%= current_class("sports") %>><%= link_to "Sports", sports_path %></li>
             <li<%= current_class("athletes") %>><%= link_to "Athletes", athletes_path %></li>
             <li class="dropdown">
@@ -94,6 +95,7 @@
               </ul>
             </li>
           </ul>
+          <% end %>
         </div>
         <ul class="nav pull-right">
           <li class="divider-vertical"></li>
