--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,18 +5,22 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>Name</th>
       <th>Email</th>
       <th>Admin</th>
       <th>Athlete</th>
+      <th>Sport</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
   <% @users.each do |user| %>
     <tr>
+      <td><%= user.name %></td>
       <td><%= user.email %></td>
       <td><% if user.admin? %><i class="icon-ok"></i><% end %></td>
-      <td><% if !user.admin? %><i class="icon-ok"></i><% end %></td>
+      <td><% if user.athlete? %><i class="icon-ok"></i><% end %></td>
+      <td><%= user.sport if user.athlete? %></td>
       <td>
       <%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %>
       </td>
