--- a/app/assets/stylesheets/twitter.css.scss
+++ b/app/assets/stylesheets/twitter.css.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the twitter controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#tweet_text {
+  width: 500px;
+  height: 50px;
+  font-size: 14px;
+}
