--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -17,7 +17,7 @@
     
     <p><blockquote><%= highlight(@issue.tweet, @issue.blacklisted_words.split(", ")) %></blockquote></p>
     
-    <% if @issue.response.blank? %>
+    <% if @issue.response.blank? && current_user.admin? %>
     
       <%= simple_form_for @issue, :html => { :class => 'form-horizontal' } do |f| %>
         <fieldset>
@@ -32,7 +32,7 @@
         </fieldset>
       <% end %>
       
-    <% else %>
+    <% elsif @issue.response.present? %>
         
         <h2>Response</h2>
         <p><em>This tweet was <%= status_and_icon(@issue.status) %> on <%= @issue.updated_at %> by User Lastname</em></p>
