--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -24,8 +24,11 @@
           <ul class="nav">
             <li<%= static_current_page(features_path) %>><%= link_to "Features", features_path %></li>
             <li<%= static_current_page(pricing_path) %>><%= link_to "Pricing", pricing_path %></li>
+          </ul>
+          <ul class="nav pull-right">
+            <li class="divider-vertical"></li>
             <li<%= static_current_page(signup_path) %>><%= link_to "Sign up", signup_path %></li>
-            <li<%= static_current_page(new_user_session_path) %>><%= link_to "Log in", new_user_session_path %></li>
+            <li<%= static_current_page(new_user_session_path) %>><%= link_to "Log in", new_user_session_path %></li>            
           </ul>
         </div>
       </div>
