--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -68,7 +68,7 @@
     <% if @issues.present? %>
     <ul>      
       <% @issues.select("distinct on(issues.athlete_id) issues.*").limit(5).each do |issue| %>
-      <li><%= link_to issue.athlete.name, issue_path(issue) %> (<%= issue.athlete.issues.count %>)</li>
+      <li><%= link_to issue.athlete.name, issue_path(issue) %> (<%= issue.athlete.athlete_issues.count %>)</li>
       <% end %>
     </ul>
     <% else %>
@@ -81,7 +81,7 @@
     <% if @issues.present? %>
     <ul>
       <% @issues.includes(athlete: :sport).select("distinct on(athlete.sport_id) issues.*").limit(5).each do |issue| %>
-      <li><%= link_to issue.sport.name, issue_path(issue) %> (<%= issue.athlete.issues.count %>)</li>
+      <li><%= link_to issue.sport.name, issue_path(issue) %> (<%= issue.athlete.sport.issues.count %>)</li>
       <% end %>
     </ul>
     <% else %>
