--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -80,8 +80,8 @@
     <h4>Most Issues by Sport</h4>
     <% if @issues.present? %>
     <ul>
-      <% @issues.includes(athlete: :sport).select("distinct on(athlete.sport_id) issues.*").limit(5).each do |issue| %>
-      <li><%= link_to issue.athlete.sport.name, issue_path(issue) %></li>
+      <% @issues.includes(athlete: :sport).select("distinct on(issues.athlete_id) issues.*").limit(5).each do |issue| %>
+      <li><%= link_to issue.athlete.sport.name, issue_path(issue) %> (<%= issue.athlete.sport.users.collect { |u| u.issues }.count %>)</li>
       <% end %>
     </ul>
     <% else %>
