--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,20 +1,20 @@
 <div class="hero-unit">
   <h1>Keeping bad tweets off the streets, yo.</h1>
-  <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering your the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
+  <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
   <p><%= link_to "Learn more", features_path, class: "btn btn-large" %>&nbsp;<%= link_to "Sign up", signup_path, class: "btn btn-primary btn-large" %></p>
 </div>
 
 <div class="row">
   <div class="span4">
-    <h2>This feature</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>Why do you need Sift Pro?</h2>
+    <p>Let's face it, what you put on the Internet is there, and like a bad case of herpes, bad tweets are there forever. At Sift Pro we want to keep your Twitter herpes off of your followers' feeds. We understand that the stuff you post on twitter is important to your followers and your reputation. Protect your tweets and your reputation with Sift Pro.</p>
   </div>
   <div class="span4">
-    <h2>That feature</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>How does Sift Pro work?</h2>
+    <p>Sift Pro works like your own personal editor by filtering out the bad tweets before they hit your feed. Simply use our app as your twitter client and our intuitive software will alert you when one of your tweets is offensive in some way.</p>
   </div>
   <div class="span4">
-    <h2>Another feature</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>Who Should Use Sift Pro?</h2>
+    <p>We've designed Sift Pro to help monitor tweets in an easier and more efficient way. Sift Pro is a great way for athletic compliance officers, moms, business owners, and celebrity media handlers to monitor the tweets of their athletes, children, employees, and celebrities.</p>
   </div>
 </div>
