Some fancy formatting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -131,10 +131,12 @@
     <div class="row">
       <div class="span12"><%= yield %></div>
     </div>
-    
-    <footer>
-      <p>&copy; <%= Time.now.year %> Sift Pro</p>
-    </footer>
   </div>
+  
+  <footer>
+    <div class="container">
+      <p>&copy; <%= Time.now.year %> Sift Pro</p>
+    </div>
+  </footer>
 </body>
 </html>
