--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -35,6 +35,8 @@
     </div>
   </div>
 
+  <%= yield :hero_unit %>
+
   <div class="container">
     <% flash.each do |name, msg| %>
       <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
@@ -46,10 +48,12 @@
     <div class="row">
       <div class="span12"><%= yield %></div>
     </div>
-    
-    <footer>
-      <p>&copy; <%= Time.now.year %> Sift Pro</p>
-    </footer>
   </div>
+      
+  <footer>
+    <div class="container">
+      <p>&copy; <%= Time.now.year %> Sift Pro</p>
+    </div>
+  </footer>
 </body>
 </html>
