--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1,6 +1,7 @@
 .hero-unit {
-  padding: 60px;
+  padding: 60px 0;
   margin-bottom: 30px;
+  margin-top: -20px;
   background-color: #f5f5f5;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
