--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,12 @@
+<% content_for :hero_unit do %>
 <div class="hero-unit">
-  <h1>Keeping bad tweets off the streets, yo.</h1>
-  <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
-  <p><%= link_to "Learn more", features_path, class: "btn btn-large" %>&nbsp;<%= link_to "Sign up", signup_path, class: "btn btn-primary btn-large" %></p>
+  <div class="container">
+    <h1>Keeping bad tweets off the streets, yo.</h1>
+    <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
+    <p><%= link_to "Learn more", features_path, class: "btn btn-large" %>&nbsp;<%= link_to "Sign up", signup_path, class: "btn btn-primary btn-large" %></p>
+  </div>
 </div>
+<% end %>
 
 <div class="row">
   <div class="span4">
