Changing tone of front page copy

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,8 @@
 <% content_for :hero_unit do %>
 <div class="hero-unit">
   <div class="container">
-    <h1>Keeping bad tweets off the streets, yo.</h1>
-    <p>Sift Pro uses some magic to do some really fantastic things for you, including (but certainly not limited to) making coffee, doing laundry, and filtering the tweets of those irresponsible eighteen-year-old ambassadors of your brand, otherwise known as student athletes.</p>
+    <h1>Protect your reputation.</h1>
+    <p>Monitoring doesn&rsquo;t work. Reputation-damaging tweets still get out there. Stop them before it happens. Sift Pro helps you protect your reputation by stopping tweets before the internet ever sees them.</p>
     <p><%= link_to "Learn more", features_path, class: "btn btn-large" %>&nbsp;<%= link_to "Sign up", signup_path, class: "btn btn-primary btn-large" %></p>
   </div>
 </div>
@@ -11,11 +11,11 @@
 <div class="row">
   <div class="span4">
     <h2>Why do you need Sift Pro?</h2>
-    <p>Let's face it, what you put on the Internet is there, and like a bad case of herpes, bad tweets are there forever. At Sift Pro we want to keep your Twitter herpes off of your followers' feeds. We understand that the stuff you post on twitter is important to your followers and your reputation. Protect your tweets and your reputation with Sift Pro.</p>
+    <p>Let's face it, what you put on the internet is there to stay &mdash; for better or worse. We understand that the stuff you post on Twitter is important to your followers and your reputation. Protect your tweets and your reputation with Sift Pro.</p>
   </div>
   <div class="span4">
     <h2>How does Sift Pro work?</h2>
-    <p>Sift Pro works like your own personal editor by filtering out the bad tweets before they hit your feed. Simply use our app as your twitter client and our intuitive software will alert you when one of your tweets is offensive in some way.</p>
+    <p>Sift Pro works like your own personal editor by filtering out the bad tweets before they hit your feed. Simply use our app as your Twitter client and our intuitive software will alert you when one of your tweets is offensive in some way.</p>
   </div>
   <div class="span4">
     <h2>Who Should Use Sift Pro?</h2>
