--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,13 +1,13 @@
-<%%= simple_form_for(@<%= singular_table_name %>) do |f| %>
-  <%%= f.error_notification %>
+<%%= simple_form_for(@<%= singular_table_name %>, :html => { :class => 'form-horizontal' }) do |f| %>
+<fieldset>
+  <legend><%= controller.action_name.capitalize %> <%= singular_table_name.capitalize %></legend>
 
-  <div class="form-inputs">
   <%- attributes.each do |attribute| -%>
     <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
   <%- end -%>
-  </div>
 
   <div class="form-actions">
-    <%%= f.button :submit %>
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to 'Cancel', root_path, :class => 'btn' %>
   </div>
 <%% end %>
